# NameTag

./: .gitignore  CMakeLists.txt  main.qml
.github/workflows/: main.yml  remove-old-artifacts.yml
assets/: MacOSXBundleInfo.plist.in
ci/macos/: certs.p12
